[project]
name = "feature-flag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.122.0",
    "psycopg2>=2.9.11",
    "pyjwt>=2.10.1",
]
